baikal/baikal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namesapce: baikal
spec:
  selector:
    app: baikal
  ports:
    - name: http
      port: 80
      targetPort: http
